fix: another correct z-index

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -6,7 +6,6 @@
   padding: 3.75px 0;
   border-radius: 100px;
   position: relative;
-  z-index: -2;
   background-image: url("../../../images/avatar.png");
 }
 
@@ -16,7 +15,7 @@
 
 .profile__avatar::before {
   position: absolute;
-  z-index: -1;
+  z-index: 1;
   background-color: #000;
   opacity: 0;
   transition: opacity .3s ease-in-out;
@@ -34,7 +33,7 @@
 
 .profile__avatar::after {
   position: absolute;
-  z-index: 0;
+  z-index: 2;
   background-image: url("../../../images/editAvatar.svg");
   background-repeat: no-repeat;
   background-size: contain;
